fixed fighter matchup alignment

--- a/styles.scss
+++ b/styles.scss
@@ -34,6 +34,7 @@
 /* use font as variable */
 html, body {
     font-family: PoppinsLight;
+    font-size: 16px;
 }
 
 h1, h2, h3{
